Add grep tool solution