@@ -20,38 +20,38 @@ public class GrepToolTest {
     @Before
     public void setUp() throws IOException {
         List<String> iliadText = Arrays.asList(
-            "Achilles sing, O Goddess! Peleus' son;",
-            "His wrath pernicious, who ten thousand woes",
-            "Caused to Achaia's host, sent many a soul",
-            "Illustrious into Ades premature,",
-            "And Heroes gave (so stood the will of Jove)",
-            "To dogs and to all ravening fowls a prey,",
-            "When fierce dispute had separated once",
-            "The noble Chief Achilles from the son",
-            "Of Atreus, Agamemnon, King of men."
+                "Achilles sing, O Goddess! Peleus' son;",
+                "His wrath pernicious, who ten thousand woes",
+                "Caused to Achaia's host, sent many a soul",
+                "Illustrious into Ades premature,",
+                "And Heroes gave (so stood the will of Jove)",
+                "To dogs and to all ravening fowls a prey,",
+                "When fierce dispute had separated once",
+                "The noble Chief Achilles from the son",
+                "Of Atreus, Agamemnon, King of men."
         );
         writeToFile("iliad.txt", iliadText);
 
         List<String> midsummerNightText = Arrays.asList(
-            "I do entreat your grace to pardon me.",
-            "I know not by what power I am made bold,",
-            "Nor how it may concern my modesty,",
-            "In such a presence here to plead my thoughts;",
-            "But I beseech your grace that I may know",
-            "The worst that may befall me in this case,",
-            "If I refuse to wed Demetrius."
+                "I do entreat your grace to pardon me.",
+                "I know not by what power I am made bold,",
+                "Nor how it may concern my modesty,",
+                "In such a presence here to plead my thoughts;",
+                "But I beseech your grace that I may know",
+                "The worst that may befall me in this case,",
+                "If I refuse to wed Demetrius."
         );
         writeToFile("midsummer-night.txt", midsummerNightText);
 
         List<String> paradiseLostText = Arrays.asList(
-            "Of Mans First Disobedience, and the Fruit",
-            "Of that Forbidden Tree, whose mortal tast",
-            "Brought Death into the World, and all our woe,",
-            "With loss of Eden, till one greater Man",
-            "Restore us, and regain the blissful Seat,",
-            "Sing Heav'nly Muse, that on the secret top",
-            "Of Oreb, or of Sinai, didst inspire",
-            "That Shepherd, who first taught the chosen Seed"
+                "Of Mans First Disobedience, and the Fruit",
+                "Of that Forbidden Tree, whose mortal tast",
+                "Brought Death into the World, and all our woe,",
+                "With loss of Eden, till one greater Man",
+                "Restore us, and regain the blissful Seat,",
+                "Sing Heav'nly Muse, that on the secret top",
+                "Of Oreb, or of Sinai, didst inspire",
+                "That Shepherd, who first taught the chosen Seed"
         );
         writeToFile("paradise-lost.txt", paradiseLostText);
 
@@ -70,23 +70,22 @@ public class GrepToolTest {
         String expected = "Of Atreus, Agamemnon, King of men.";
 
         String actual = grepTool.grep(
-            "Agamemnon",
-            Collections.emptyList(),
-            Collections.singletonList("iliad.txt")
+                "Agamemnon",
+                List.of(),
+                List.of("iliad.txt")
         );
 
         assertEquals(expected, actual);
     }
 
-    @Ignore("Remove to run test")
     @Test
     public void oneFileOneMatchPrintLineNumbersFlag() {
         String expected = "2:Of that Forbidden Tree, whose mortal tast";
 
         String actual = grepTool.grep(
-            "Forbidden",
-            Collections.singletonList("-n"),
-            Collections.singletonList("paradise-lost.txt")
+                "Forbidden",
+                Collections.singletonList("-n"),
+                Collections.singletonList("paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -98,9 +97,9 @@ public class GrepToolTest {
         String expected = "Of that Forbidden Tree, whose mortal tast";
 
         String actual = grepTool.grep(
-            "FORBIDDEN",
-            Collections.singletonList("-i"),
-            Collections.singletonList("paradise-lost.txt")
+                "FORBIDDEN",
+                Collections.singletonList("-i"),
+                Collections.singletonList("paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -112,9 +111,9 @@ public class GrepToolTest {
         String expected = "paradise-lost.txt";
 
         String actual = grepTool.grep(
-            "Forbidden",
-            Collections.singletonList("-l"),
-            Collections.singletonList("paradise-lost.txt")
+                "Forbidden",
+                Collections.singletonList("-l"),
+                Collections.singletonList("paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -126,9 +125,9 @@ public class GrepToolTest {
         String expected = "With loss of Eden, till one greater Man";
 
         String actual = grepTool.grep(
-            "With loss of Eden, till one greater Man",
-            Collections.singletonList("-x"),
-            Collections.singletonList("paradise-lost.txt")
+                "With loss of Eden, till one greater Man",
+                Collections.singletonList("-x"),
+                Collections.singletonList("paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -140,25 +139,24 @@ public class GrepToolTest {
         String expected = "9:Of Atreus, Agamemnon, King of men.";
 
         String actual = grepTool.grep(
-            "OF ATREUS, Agamemnon, KIng of MEN.",
-            Arrays.asList("-n", "-i", "-x"),
-            Collections.singletonList("iliad.txt")
+                "OF ATREUS, Agamemnon, KIng of MEN.",
+                Arrays.asList("-n", "-i", "-x"),
+                Collections.singletonList("iliad.txt")
         );
 
         assertEquals(expected, actual);
     }
 
-    @Ignore("Remove to run test")
     @Test
     public void oneFileSeveralMatchesNoFlags() {
         String expected = "Nor how it may concern my modesty,\n"
-            + "But I beseech your grace that I may know\n"
-            + "The worst that may befall me in this case,";
+                + "But I beseech your grace that I may know\n"
+                + "The worst that may befall me in this case,";
 
         String actual = grepTool.grep(
-            "may",
-            Collections.emptyList(),
-            Collections.singletonList("midsummer-night.txt")
+                "may",
+                Collections.emptyList(),
+                Collections.singletonList("midsummer-night.txt")
         );
 
         assertEquals(expected, actual);
@@ -168,13 +166,13 @@ public class GrepToolTest {
     @Test
     public void oneFileSeveralMatchesPrintLineNumbersFlag() {
         String expected = "3:Nor how it may concern my modesty,\n"
-            + "5:But I beseech your grace that I may know\n"
-            + "6:The worst that may befall me in this case,";
+                + "5:But I beseech your grace that I may know\n"
+                + "6:The worst that may befall me in this case,";
 
         String actual = grepTool.grep(
-            "may",
-            Collections.singletonList("-n"),
-            Collections.singletonList("midsummer-night.txt")
+                "may",
+                Collections.singletonList("-n"),
+                Collections.singletonList("midsummer-night.txt")
         );
 
         assertEquals(expected, actual);
@@ -186,9 +184,9 @@ public class GrepToolTest {
         String expected = "";
 
         String actual = grepTool.grep(
-            "may",
-            Collections.singletonList("-x"),
-            Collections.singletonList("midsummer-night.txt")
+                "may",
+                Collections.singletonList("-x"),
+                Collections.singletonList("midsummer-night.txt")
         );
 
         assertEquals(expected, actual);
@@ -198,12 +196,12 @@ public class GrepToolTest {
     @Test
     public void oneFileSeveralMatchesCaseInsensitiveFlag() {
         String expected = "Achilles sing, O Goddess! Peleus' son;\n"
-            + "The noble Chief Achilles from the son";
+                + "The noble Chief Achilles from the son";
 
         String actual = grepTool.grep(
-            "ACHILLES",
-            Collections.singletonList("-i"),
-            Collections.singletonList("iliad.txt")
+                "ACHILLES",
+                Collections.singletonList("-i"),
+                Collections.singletonList("iliad.txt")
         );
 
         assertEquals(expected, actual);
@@ -213,15 +211,15 @@ public class GrepToolTest {
     @Test
     public void oneFileSeveralMatchesInvertedFlag() {
         String expected = "Brought Death into the World, and all our woe,\n"
-            + "With loss of Eden, till one greater Man\n"
-            + "Restore us, and regain the blissful Seat,\n"
-            + "Sing Heav'nly Muse, that on the secret top\n"
-            + "That Shepherd, who first taught the chosen Seed";
+                + "With loss of Eden, till one greater Man\n"
+                + "Restore us, and regain the blissful Seat,\n"
+                + "Sing Heav'nly Muse, that on the secret top\n"
+                + "That Shepherd, who first taught the chosen Seed";
 
         String actual = grepTool.grep(
-            "Of",
-            Collections.singletonList("-v"),
-            Collections.singletonList("paradise-lost.txt")
+                "Of",
+                Collections.singletonList("-v"),
+                Collections.singletonList("paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -233,9 +231,9 @@ public class GrepToolTest {
         String expected = "";
 
         String actual = grepTool.grep(
-            "Gandalf",
-            Arrays.asList("-n", "-l", "-x", "-i"),
-            Collections.singletonList("iliad.txt")
+                "Gandalf",
+                Arrays.asList("-n", "-l", "-x", "-i"),
+                Collections.singletonList("iliad.txt")
         );
 
         assertEquals(expected, actual);
@@ -247,9 +245,9 @@ public class GrepToolTest {
         String expected = "iliad.txt";
 
         String actual = grepTool.grep(
-            "ten",
-            Arrays.asList("-n", "-l"),
-            Collections.singletonList("iliad.txt")
+                "ten",
+                Arrays.asList("-n", "-l"),
+                Collections.singletonList("iliad.txt")
         );
 
         assertEquals(expected, actual);
@@ -259,18 +257,18 @@ public class GrepToolTest {
     @Test
     public void oneFileSeveralMatchesInvertedAndMatchEntireLinesFlags() {
         String expected = "Achilles sing, O Goddess! Peleus' son;\n"
-            + "His wrath pernicious, who ten thousand woes\n"
-            + "Caused to Achaia's host, sent many a soul\n"
-            + "And Heroes gave (so stood the will of Jove)\n"
-            + "To dogs and to all ravening fowls a prey,\n"
-            + "When fierce dispute had separated once\n"
-            + "The noble Chief Achilles from the son\n"
-            + "Of Atreus, Agamemnon, King of men.";
+                + "His wrath pernicious, who ten thousand woes\n"
+                + "Caused to Achaia's host, sent many a soul\n"
+                + "And Heroes gave (so stood the will of Jove)\n"
+                + "To dogs and to all ravening fowls a prey,\n"
+                + "When fierce dispute had separated once\n"
+                + "The noble Chief Achilles from the son\n"
+                + "Of Atreus, Agamemnon, King of men.";
 
         String actual = grepTool.grep(
-            "Illustrious into Ades premature,",
-            Arrays.asList("-x", "-v"),
-            Collections.singletonList("iliad.txt")
+                "Illustrious into Ades premature,",
+                Arrays.asList("-x", "-v"),
+                Collections.singletonList("iliad.txt")
         );
 
         assertEquals(expected, actual);
@@ -282,9 +280,9 @@ public class GrepToolTest {
         String expected = "iliad.txt:Of Atreus, Agamemnon, King of men.";
 
         String actual = grepTool.grep(
-            "Agamemnon",
-            Collections.emptyList(),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "Agamemnon",
+                Collections.emptyList(),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -294,13 +292,13 @@ public class GrepToolTest {
     @Test
     public void multipleFilesSeveralMatchesNoFlags() {
         String expected = "midsummer-night.txt:Nor how it may concern my modesty,\n"
-            + "midsummer-night.txt:But I beseech your grace that I may know\n"
-            + "midsummer-night.txt:The worst that may befall me in this case,";
+                + "midsummer-night.txt:But I beseech your grace that I may know\n"
+                + "midsummer-night.txt:The worst that may befall me in this case,";
 
         String actual = grepTool.grep(
-            "may",
-            Collections.emptyList(),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "may",
+                Collections.emptyList(),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -310,14 +308,14 @@ public class GrepToolTest {
     @Test
     public void multipleFilesSeveralMatchesPrintLineNumbersFlag() {
         String expected = "midsummer-night.txt:5:But I beseech your grace that I may know\n"
-            + "midsummer-night.txt:6:The worst that may befall me in this case,\n"
-            + "paradise-lost.txt:2:Of that Forbidden Tree, whose mortal tast\n"
-            + "paradise-lost.txt:6:Sing Heav'nly Muse, that on the secret top";
+                + "midsummer-night.txt:6:The worst that may befall me in this case,\n"
+                + "paradise-lost.txt:2:Of that Forbidden Tree, whose mortal tast\n"
+                + "paradise-lost.txt:6:Sing Heav'nly Muse, that on the secret top";
 
         String actual = grepTool.grep(
-            "that",
-            Collections.singletonList("-n"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "that",
+                Collections.singletonList("-n"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -327,12 +325,12 @@ public class GrepToolTest {
     @Test
     public void multipleFilesOneMatchPrintFileNamesFlag() {
         String expected = "iliad.txt\n"
-            + "paradise-lost.txt";
+                + "paradise-lost.txt";
 
         String actual = grepTool.grep(
-            "who",
-            Collections.singletonList("-l"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "who",
+                Collections.singletonList("-l"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -342,20 +340,20 @@ public class GrepToolTest {
     @Test
     public void multipleFilesSeveralMatchesCaseInsensitiveFlag() {
         String expected = "iliad.txt:Caused to Achaia's host, sent many a soul\n"
-            + "iliad.txt:Illustrious into Ades premature,\n"
-            + "iliad.txt:And Heroes gave (so stood the will of Jove)\n"
-            + "iliad.txt:To dogs and to all ravening fowls a prey,\n"
-            + "midsummer-night.txt:I do entreat your grace to pardon me.\n"
-            + "midsummer-night.txt:In such a presence here to plead my thoughts;\n"
-            + "midsummer-night.txt:If I refuse to wed Demetrius.\n"
-            + "paradise-lost.txt:Brought Death into the World, and all our woe,\n"
-            + "paradise-lost.txt:Restore us, and regain the blissful Seat,\n"
-            + "paradise-lost.txt:Sing Heav'nly Muse, that on the secret top";
+                + "iliad.txt:Illustrious into Ades premature,\n"
+                + "iliad.txt:And Heroes gave (so stood the will of Jove)\n"
+                + "iliad.txt:To dogs and to all ravening fowls a prey,\n"
+                + "midsummer-night.txt:I do entreat your grace to pardon me.\n"
+                + "midsummer-night.txt:In such a presence here to plead my thoughts;\n"
+                + "midsummer-night.txt:If I refuse to wed Demetrius.\n"
+                + "paradise-lost.txt:Brought Death into the World, and all our woe,\n"
+                + "paradise-lost.txt:Restore us, and regain the blissful Seat,\n"
+                + "paradise-lost.txt:Sing Heav'nly Muse, that on the secret top";
 
         String actual = grepTool.grep(
-            "TO",
-            Collections.singletonList("-i"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "TO",
+                Collections.singletonList("-i"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -365,13 +363,13 @@ public class GrepToolTest {
     @Test
     public void multipleFilesSeveralMatchesInvertedFlag() {
         String expected = "iliad.txt:Achilles sing, O Goddess! Peleus' son;\n"
-            + "iliad.txt:The noble Chief Achilles from the son\n"
-            + "midsummer-night.txt:If I refuse to wed Demetrius.";
+                + "iliad.txt:The noble Chief Achilles from the son\n"
+                + "midsummer-night.txt:If I refuse to wed Demetrius.";
 
         String actual = grepTool.grep(
-            "a",
-            Collections.singletonList("-v"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "a",
+                Collections.singletonList("-v"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -383,9 +381,9 @@ public class GrepToolTest {
         String expected = "midsummer-night.txt:But I beseech your grace that I may know";
 
         String actual = grepTool.grep(
-            "But I beseech your grace that I may know",
-            Collections.singletonList("-x"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "But I beseech your grace that I may know",
+                Collections.singletonList("-x"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -397,9 +395,9 @@ public class GrepToolTest {
         String expected = "paradise-lost.txt:4:With loss of Eden, till one greater Man";
 
         String actual = grepTool.grep(
-            "WITH LOSS OF EDEN, TILL ONE GREATER MAN",
-            Arrays.asList("-n", "-i", "-x"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "WITH LOSS OF EDEN, TILL ONE GREATER MAN",
+                Arrays.asList("-n", "-i", "-x"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -411,9 +409,9 @@ public class GrepToolTest {
         String expected = "";
 
         String actual = grepTool.grep(
-            "Frodo",
-            Arrays.asList("-n", "-l", "-x", "-i"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "Frodo",
+                Arrays.asList("-n", "-l", "-x", "-i"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -423,12 +421,12 @@ public class GrepToolTest {
     @Test
     public void multipleFilesSeveralMatchesFileFlagTakesPrecedenceOverLineNumberFlag() {
         String expected = "iliad.txt\n"
-            + "paradise-lost.txt";
+                + "paradise-lost.txt";
 
         String actual = grepTool.grep(
-            "who",
-            Arrays.asList("-n", "-l"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "who",
+                Arrays.asList("-n", "-l"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
@@ -438,33 +436,33 @@ public class GrepToolTest {
     @Test
     public void multipleFilesSeveralMatchesInvertedAndMatchEntireLinesFlags() {
         String expected = "iliad.txt:Achilles sing, O Goddess! Peleus' son;\n"
-            + "iliad.txt:His wrath pernicious, who ten thousand woes\n"
-            + "iliad.txt:Caused to Achaia's host, sent many a soul\n"
-            + "iliad.txt:And Heroes gave (so stood the will of Jove)\n"
-            + "iliad.txt:To dogs and to all ravening fowls a prey,\n"
-            + "iliad.txt:When fierce dispute had separated once\n"
-            + "iliad.txt:The noble Chief Achilles from the son\n"
-            + "iliad.txt:Of Atreus, Agamemnon, King of men.\n"
-            + "midsummer-night.txt:I do entreat your grace to pardon me.\n"
-            + "midsummer-night.txt:I know not by what power I am made bold,\n"
-            + "midsummer-night.txt:Nor how it may concern my modesty,\n"
-            + "midsummer-night.txt:In such a presence here to plead my thoughts;\n"
-            + "midsummer-night.txt:But I beseech your grace that I may know\n"
-            + "midsummer-night.txt:The worst that may befall me in this case,\n"
-            + "midsummer-night.txt:If I refuse to wed Demetrius.\n"
-            + "paradise-lost.txt:Of Mans First Disobedience, and the Fruit\n"
-            + "paradise-lost.txt:Of that Forbidden Tree, whose mortal tast\n"
-            + "paradise-lost.txt:Brought Death into the World, and all our woe,\n"
-            + "paradise-lost.txt:With loss of Eden, till one greater Man\n"
-            + "paradise-lost.txt:Restore us, and regain the blissful Seat,\n"
-            + "paradise-lost.txt:Sing Heav'nly Muse, that on the secret top\n"
-            + "paradise-lost.txt:Of Oreb, or of Sinai, didst inspire\n"
-            + "paradise-lost.txt:That Shepherd, who first taught the chosen Seed";
+                + "iliad.txt:His wrath pernicious, who ten thousand woes\n"
+                + "iliad.txt:Caused to Achaia's host, sent many a soul\n"
+                + "iliad.txt:And Heroes gave (so stood the will of Jove)\n"
+                + "iliad.txt:To dogs and to all ravening fowls a prey,\n"
+                + "iliad.txt:When fierce dispute had separated once\n"
+                + "iliad.txt:The noble Chief Achilles from the son\n"
+                + "iliad.txt:Of Atreus, Agamemnon, King of men.\n"
+                + "midsummer-night.txt:I do entreat your grace to pardon me.\n"
+                + "midsummer-night.txt:I know not by what power I am made bold,\n"
+                + "midsummer-night.txt:Nor how it may concern my modesty,\n"
+                + "midsummer-night.txt:In such a presence here to plead my thoughts;\n"
+                + "midsummer-night.txt:But I beseech your grace that I may know\n"
+                + "midsummer-night.txt:The worst that may befall me in this case,\n"
+                + "midsummer-night.txt:If I refuse to wed Demetrius.\n"
+                + "paradise-lost.txt:Of Mans First Disobedience, and the Fruit\n"
+                + "paradise-lost.txt:Of that Forbidden Tree, whose mortal tast\n"
+                + "paradise-lost.txt:Brought Death into the World, and all our woe,\n"
+                + "paradise-lost.txt:With loss of Eden, till one greater Man\n"
+                + "paradise-lost.txt:Restore us, and regain the blissful Seat,\n"
+                + "paradise-lost.txt:Sing Heav'nly Muse, that on the secret top\n"
+                + "paradise-lost.txt:Of Oreb, or of Sinai, didst inspire\n"
+                + "paradise-lost.txt:That Shepherd, who first taught the chosen Seed";
 
         String actual = grepTool.grep(
-            "Illustrious into Ades premature,",
-            Arrays.asList("-x", "-v"),
-            Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
+                "Illustrious into Ades premature,",
+                Arrays.asList("-x", "-v"),
+                Arrays.asList("iliad.txt", "midsummer-night.txt", "paradise-lost.txt")
         );
 
         assertEquals(expected, actual);
